# mbon-dash-2025

./: .env.example  .env.local.example  .eslintrc.json  .gitignore  .npmrc  .prettierignore  ANALYSIS_APPROACH.md  CLAUDE.md  CODE_REVIEW_IMPLEMENTATION_PLAN.md  DATA.md  IMPLEMENTATION_PLAN.md  LICENSE  ML_SECTION_UPDATES_SUMMARY.md  README.md  README_FUTURE.md  REFACTORING_PLAN.md  SITE-REFACTOR-NOTES.md  WARP.md  big_picture_thoughts_25sept2025.md  editor-marimo-check.py  hello.py  jest.config.js  jest.setup.js  marimo-config.md  marimo-helpers.sh  mkdocs.yml  next.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  test-precommit.md  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
python/: .pre-commit-config.yaml  Makefile  WARP.md  analyze_acoustic_vs_environmental.py  check_data_quality.py  coverage.xml  create_acoustic_temporal_features.py  data_lineage.json  data_location.txt  debug_alignment.py  debug_output.txt  fix_notebook_paths.py  generate_correlation_view.py  generate_histogram_data.py  generate_pca_view.py  generate_swapped_heatmap.py  hello.py  improved_temporal_analysis_pipeline.py  install_package.py  pyproject.toml  quick_fix_hours.py  quick_heatmap.py  regenerate_pattern_matches.py  simple_clustering_demo.py  test_cluster_metadata.py
python/FRESH-START-26SEP2025/: PIPELINE_PLAN.md
python/acoustic_vs_environmental/: 01_data_loading.py  02_baseline_comparison.py  03_temporal_features.py  05_species_specific_analysis.py  06_simple_correlation_check.py  06_temporal_correlation_analysis.py  07_temporal_synchrony_analysis.py  09_detection_guidance.py  Acoustic_vs_Environmental_Presentation.html  Acoustic_vs_Environmental_Presentation.qmd  DEPLOYMENT_STATUS.md  FINAL_CORRECTED_ANALYSIS.md  Marine_Acoustic_Discovery_Report.qmd  Marine_Acoustic_Discovery_Report_v2.qmd  Phase9_Detection_Guidance_Report.qmd  Publication_Analysis_Acoustic_vs_Environmental_Predictors.html  Publication_Analysis_Acoustic_vs_Environmental_Predictors.qmd  Publication_Analysis_Acoustic_vs_Environmental_Predictors_CORRECTED.qmd  README.md  SCRIPT_REFERENCE.md  create_improved_temperature_figure.py  data_01_aligned_2021.parquet  prepare_github_pages.py  regenerate_key_figures.py  requirements.txt  run_full_pipeline.py  selected_acoustic_indices.csv  visual_pattern_correlation_check.csv
python/config/: species_filter.yaml
python/event_analysis/: event_statistics.csv
(+520 files in other folders)
