[project]
name = "python"
version = "0.1.0"
description = "Acoustic indices and soundscapes - ESONS dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.29",
    "marimo>=0.15.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "statsmodels>=0.14.5",
    "xgboost>=3.0.5",
]
